moved dev to live changed links styles on dev changed footer content added footer to all pages need to edit elements in files and timeline to be fixed (causes gap at top, no gap in timeline due to overflow) changed research page dimensions

--- a/website/live/css/files.css
+++ b/website/live/css/files.css
@@ -1,12 +1,12 @@
 #files{
   background-color: #5BBC47;
-  position: relative;
+  position:absolute;
   width:100%;
   height:100%;
 }
 
 #files-list{
-  position: relative;
+  position:relative;
   transform: translate(-50%, -50%);
   top:50%;
   left:50%;
