--- a/website/live/css/index.css
+++ b/website/live/css/index.css
@@ -1,5 +1,5 @@
 .pages{
-  position: relative;
+  position:absolute;
   width:100%;
   height:100%;
 }
@@ -37,6 +37,7 @@
 }
 
 #home{
+  position:relative;
   background: url("../img/bg-home.jpg");
   /*image courtesy of ESA (European Space Agency): http://www.esa.int/esaKIDSen/SEMI5LDY37H_Technology_1.html*/
   background-size: auto 100%;
@@ -46,6 +47,7 @@
 }
 
 #about{
+  position:relative;
   background: url("../img/bg-about.jpg");
   /*image courtesy of ESA (European Space Agency): http://www.esa.int/Our_Activities/Space_Engineering_Technology/Galileo_satellite_undergoes_launch_check-up_at_ESTEC*/
   background-size: auto 100%;
@@ -55,6 +57,7 @@
 }
 
 #team{
+  position:relative;
   background: url("../img/bg-team.jpg");
   /*image courtesy of ESA (European Space Agency): http://www.esa.int/spaceinimages/Images/2010/04/Electrical_component*/
   background-size: auto 100%;
@@ -64,6 +67,7 @@
 }
 
 #sponsorship{
+  position:relative;
   /*background: url("../img/bg-sponsorship.jpg");*/
   /*image courtesy of ESA (European Space Agency): http://www.esa.int/Our_Activities/Operations/Huygens_twin_serves_on_Earth/%28print%29*/
   background-size: auto 100%;
@@ -73,6 +77,7 @@
 }
 
 #work{
+  position:relative;
   /*background: url("../img/bg-work.jpg");*/
   /*image courtesy of ESA (European Space Agency): http://www.esa.int/gsp/ACT/events/workshops/ws_2015_Apr_30.html*/
   background-size: auto 100%;
