--- a/website/live/css/timeline.css
+++ b/website/live/css/timeline.css
@@ -1,12 +1,12 @@
 #sections{
   background-color: #7A7A7A;
-  position: relative;
+  position:absolute;
   width:100%;
   height:100%;
 }
 
 #sections-body{
-  position: relative;
+  position: absolute;
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
