--- a/website/live/css/timeline/research.css
+++ b/website/live/css/timeline/research.css
@@ -5,8 +5,8 @@
 
 #cdf{
   position: relative;
-  width: 51%;
-  left: 25%;
-  height: 48%;
   top: 30%;
+  height: 40%;
+  left: 30%;
+  width: 40%;
 }
